--- a/VGG-9_Training.ipynb
+++ b/VGG-9_Training.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "russian-hearing",
+   "id": "becoming-adrian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,11 +18,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "international-backup",
+   "execution_count": 4,
+   "id": "compound-terrorist",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 307063 images belonging to 36 classes.\n",
+      "Found 43904 images belonging to 36 classes.\n"
+     ]
+    }
+   ],
    "source": [
+    "#Basic Varibales for Data\n",
+    "img_rows, img_cols = 32, 32\n",
+    "batch_size = 16\n",
+    "num_classes = 36\n",
+    "\n",
     "#Declaring Variables for Train and Test Data Directory\n",
     "train_data_dir = './refined_dataset/train'\n",
     "validation_data_dir = './refined_dataset/test'\n",
@@ -32,8 +46,17 @@
     "validation_datagen = ImageDataGenerator(rescale=1./255)\n",
     "\n",
     "#Lets Make Generators for getting The Data and Look at Size of dataset\n",
-    "train_generator = train_datagen.flow_from_directory(train_data_dir, target_size=(img_rows, img_cols), batch_size=batch_size, class_mode='categorical')"
+    "train_generator = train_datagen.flow_from_directory(train_data_dir, target_size=(img_rows, img_cols), batch_size=batch_size, class_mode='categorical')\n",
+    "validation_generator = validation_datagen.flow_from_directory(validation_data_dir,target_size=(img_rows, img_cols),batch_size=batch_size, class_mode='categorical')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "particular-restoration",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
