Classification report added

--- a/MobileNetV2_Training.ipynb
+++ b/MobileNetV2_Training.ipynb
@@ -730,6 +730,71 @@
     "_ = plt.xticks(tick_marks, classes, rotation=90)\n",
     "_ = plt.yticks(tick_marks, classes)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "geographic-overall",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.09      0.53      0.16       452\n",
+      "           1       0.55      0.64      0.59       444\n",
+      "           2       0.58      0.89      0.70       444\n",
+      "           3       0.79      0.47      0.59       431\n",
+      "           4       0.43      0.80      0.56       428\n",
+      "           5       0.58      0.89      0.70       444\n",
+      "           6       0.24      0.96      0.38       440\n",
+      "           7       0.83      0.48      0.61       431\n",
+      "           8       0.62      0.48      0.54       431\n",
+      "           9       0.48      0.58      0.53       432\n",
+      "           A       0.95      0.60      0.74      3205\n",
+      "           B       0.79      0.71      0.75      3212\n",
+      "           C       0.85      0.69      0.76      3208\n",
+      "           D       0.67      0.78      0.72      3211\n",
+      "           E       0.56      0.83      0.67      3211\n",
+      "           F       0.93      0.68      0.79      3203\n",
+      "           G       0.84      0.56      0.67      3205\n",
+      "           H       0.31      0.88      0.46      3213\n",
+      "           I       0.53      0.77      0.63      3201\n",
+      "           J       0.91      0.67      0.77      3201\n",
+      "           K       0.74      0.72      0.73      3204\n",
+      "           L       0.76      0.82      0.79      3205\n",
+      "           M       0.75      0.72      0.74      3204\n",
+      "           N       0.84      0.63      0.72      3206\n",
+      "           O       0.87      0.14      0.23      3201\n",
+      "           P       0.91      0.82      0.87      3213\n",
+      "           Q       0.79      0.67      0.72      3201\n",
+      "           R       0.85      0.73      0.78      3207\n",
+      "           S       0.94      0.64      0.76      3204\n",
+      "           T       0.92      0.72      0.81      3202\n",
+      "           U       0.66      0.78      0.72      3208\n",
+      "           V       0.92      0.63      0.75      3203\n",
+      "           W       0.86      0.73      0.79      3201\n",
+      "           X       0.84      0.76      0.80      3207\n",
+      "           Y       0.87      0.71      0.78      3205\n",
+      "           Z       0.84      0.76      0.80      3206\n",
+      "\n",
+      "    accuracy                           0.70     87724\n",
+      "   macro avg       0.72      0.69      0.67     87724\n",
+      "weighted avg       0.78      0.70      0.71     87724\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Imports Needed for Classification report\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "#Printing Classification Report\n",
+    "target_names = list(class_labels.values())\n",
+    "print(classification_report(validation_generator.classes, y_pred, target_names=target_names))"
+   ]
   }
  ],
  "metadata": {
