Vgg Photos added

--- a/MobileNetV2_NEW.ipynb
+++ b/MobileNetV2_NEW.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "alien-combine",
    "metadata": {},
    "outputs": [
@@ -620,8 +620,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "rising-ceramic",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Imports Needed to Print Confusion Matrix\n",
+    "import matplotlib.pyplot as plt\n",
+    "import sklearn\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "import numpy as np\n",
+    "from tensorflow.keras.models import load_model\n",
+    "from tensorflow.keras.models import model_from_json\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "incorporated-jerusalem",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 87724 images belonging to 36 classes.\n",
+      "WARNING:tensorflow:From <ipython-input-4-636c7a0b2be9>:34: Model.predict_generator (from tensorflow.python.keras.engine.training) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use Model.predict, which supports generators.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def load_model(path):\n",
+    "        try:\n",
+    "            path = splitext(path)[0]\n",
+    "            with open('%s.json' % path, 'r') as json_file:\n",
+    "                model_json = json_file.read()\n",
+    "            model = model_from_json(model_json, custom_objects={})\n",
+    "            model.load_weights('%s.h5' % path)\n",
+    "            print(\"Loading model successfully...\")\n",
+    "            return model\n",
+    "        except Exception as e:\n",
+    "            print(e)\n",
+    "\n",
+    "json_file = open('MobileNets_character_recognition_VGG.json', 'r')\n",
+    "loaded_model_json = json_file.read()\n",
+    "json_file.close()\n",
+    "model = model_from_json(loaded_model_json)\n",
+    "model.load_weights(\"License_character_recognition_Little_VGG.h5\")\n",
+    "\n",
+    "validation_data_dir1 = './refined_dataset/val'\n",
+    "nb_validation_samples1 = 87724\n",
+    "\n",
+    "validation_generator = validation_datagen.flow_from_directory(\n",
+    "        validation_data_dir1,\n",
+    "        target_size=(img_rows, img_cols),\n",
+    "        batch_size=batch_size,\n",
+    "        class_mode='categorical',\n",
+    "        shuffle=False)\n",
+    "\n",
+    "class_labels = validation_generator.class_indices\n",
+    "class_labels = {v: k for k, v in class_labels.items()}\n",
+    "classes = list(class_labels.values())\n",
+    "\n",
+    "#Confution Matrix and Classification Report\n",
+    "Y_pred = model.predict_generator(validation_generator, nb_validation_samples1 // batch_size+1)\n",
+    "y_pred = np.argmax(Y_pred, axis=1)\n",
+    "\n",
+    "print('Confusion Matrix')\n",
+    "print(confusion_matrix(validation_generator.classes, y_pred))\n",
+    "\n",
+    "print('Classification Report')\n",
+    "target_names = list(class_labels.values())\n",
+    "print(classification_report(validation_generator.classes, y_pred, target_names=target_names))\n",
+    "\n",
+    "plt.figure(figsize=(8,8))\n",
+    "cnf_matrix = confusion_matrix(validation_generator.classes, y_pred)\n",
+    "\n",
+    "plt.imshow(cnf_matrix, interpolation='nearest')\n",
+    "plt.colorbar()\n",
+    "tick_marks = np.arange(len(classes))\n",
+    "_ = plt.xticks(tick_marks, classes, rotation=90)\n",
+    "_ = plt.yticks(tick_marks, classes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "distinct-shell",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -643,7 +731,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
